--- a/index.html
+++ b/index.html
@@ -20,14 +20,34 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Modal Header</h4>
+                    <h4 class="modal-title">Achiever!!!</h4>
                 </div>
                 <div class="modal-body">
                     <p>You unlocked the Caffeine achievement.</p>
                     <p>Would you like to use it?</p>
+                    <div class="form-group">
+                        <div class="radio">
+                            <label>
+                            <input type="radio" name="inv" value="Invisibility" checked>
+                            Invisibility
+                            </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                            <input type="radio" name="super" value="SuperStrength">
+                            Super strength
+                            </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                            <input type="radio" name="speed" value="LightSpeed">
+                            Light Speed
+                          </label>
+                        </div>
+                    </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Accept</button>
+                    <button type="button" id="btAccept" class="btn btn-default" data-dismiss="modal">Accept</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
@@ -82,7 +102,7 @@
                       </select>
                     </div>
                     <div class="form-group">
-                        <label id="labelStrength" for="strengthLevel" >Caffeine Rating: 30</label>
+                        <label id="labelStrength" for="strengthLevel">Caffeine Rating: 30</label>
                         <input type="range" id="strengthLevel" name="strength" value="30">
                     </div>
                     <div class="form-group" id="container"></div>
