--- a/index.html
+++ b/index.html
@@ -5,56 +5,17 @@
     <meta charset="utf-8">
     <title>coffeerun</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
+    <style>
+        form :focus:required:invalid {
+            border-color: #a94442;
+        }
+    </style>
 </head>
 
 <body class="container">
     <header>
         <h1>CoffeeRun</h1>
     </header>
-
-    <!-- Modal -->
-    <div id="achievementModal" class="modal fade" role="dialog">
-        <div class="modal-dialog">
-
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Achiever!!!</h4>
-                </div>
-                <div class="modal-body">
-                    <p>You unlocked the Caffeine achievement.</p>
-                    <p>Would you like to use it?</p>
-                    <div class="form-group">
-                        <div class="radio">
-                            <label>
-                            <input type="radio" name="inv" value="Invisibility" checked>
-                            Invisibility
-                            </label>
-                        </div>
-                        <div class="radio">
-                            <label>
-                            <input type="radio" name="super" value="SuperStrength">
-                            Super strength
-                            </label>
-                        </div>
-                        <div class="radio">
-                            <label>
-                            <input type="radio" name="speed" value="LightSpeed">
-                            Light Speed
-                          </label>
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" id="btAccept" class="btn btn-default" data-dismiss="modal">Accept</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
     <!-- Form Section-->
     <section>
         <div class="panel panel-default">
@@ -62,11 +23,11 @@
                 <form data-coffee-order="form">
                     <div class="form-group">
                         <label for="coffeeOrder">Coffee Order</label>
-                        <input class="form-control" name="coffee" id="coffeeOrder" autofocus>
+                        <input class="form-control" name="coffee" id="coffeeOrder" autofocus required pattern="[a-zA-Z\s]+" />
                     </div>
                     <div class="form-group">
                         <label for="emailInput">Email</label>
-                        <input class="form-control" type="email" name="emailAddress" id="emailInput" value="" placeholder="dr@who.com">
+                        <input class="form-control" type="email" name="emailAddress" id="emailInput" value="" placeholder="dr@who.com" required/>
                     </div>
                     <div class="radio">
                         <label>
@@ -86,12 +47,6 @@
                         Grande
                         </label>
                     </div>
-                    <div class="radio">
-                        <label>
-                        <input type="radio" name="size" value="Titanic">
-                        Titanic
-                      </label>
-                    </div>
                     <div class="form-group">
                         <label for="flavorShot">Flavor Shot</label>
                         <select id="flavorShot" class="form-control" name="flavor">
@@ -102,7 +57,7 @@
                       </select>
                     </div>
                     <div class="form-group">
-                        <label id="labelStrength" for="strengthLevel">Caffeine Rating: 30</label>
+                        <label id="labelStrength" for="strengthLevel">Caffeine Rating</label>
                         <input type="range" id="strengthLevel" name="strength" value="30">
                     </div>
                     <div class="form-group" id="container"></div>
@@ -111,12 +66,22 @@
                 </form>
             </div>
         </div>
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <h4>Pending Orders:</h4>
+                <div data-coffee-order="checklist">
+
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Scrips and links -->
     <a href="tests.html">Tester</a>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
+    <script src="scripts/validation.js" charset="utf-8"></script>
     <script src="scripts/formhandler.js" charset="utf-8"></script>
+    <script src="scripts/checklist.js" charset="utf-8"></script>
     <script src="scripts/datastore.js" charset="utf-8"></script>
     <script src="scripts/truck.js" charset="utf-8"></script>
     <script src="scripts/main.js" charset="utf-8"></script>
